samples/_failures_safe/1761418174_a115b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bc7b4a1.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_6bc7b4a1.c:150:13: error: expected declaration or statement at end of input
  150 |             }
      |             ^
./samples/SAFE/__tmp_6bc7b4a1.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bc7b4a1.c:150:13: error: expected declaration or statement at end of input
